[tool.poetry]
name = "log_decor"
version = "0.1.0"
description = "Logging decorators for functions and methods."
authors = ["Bernardo Paulsen <paulsen.bernardo@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{ include = "log_decor" }]
keywords = ["logging", "decorator", "OOP"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.urls]
"GitHub" = "https://github.com/bernardopaulsen/log_decor"
"Documentation" = "https://bernardopaulsen.github.io/log_decor/"

[tool.poetry-dynamic-versioning]
enable = true
vcs = 'git'
format = '{base}'

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"